--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,8 +10,8 @@
   status: Ongoing development
   description: Bash script using pngquant and jpegoptim library to compress PNG JPG and JPEG with batch compression as an option.
 
-# - name: HoneyTrail
-#   image: /images/honeytrail.png
-#   link: https://gist.github.com/caubry/7103438
-#   status: Completed
-#   description: ActionScript 3 Side scrolling mini-game using right mouse click in order to gather objects and collect points.
+- name: HoneyTrail
+  image: /images/honeytrail.png
+  link: /honeytrail
+  status: Completed
+  description: ActionScript 3 Side scrolling mini-game using right mouse click in order to gather objects and collect points.
