Changed user.email locally

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -21,11 +21,11 @@
   link: /sherwood
   status: Completed
   folder: Archived
-  description: ActionScript 2 game created while studying BA(Hons) Games Design. 
+  description: ActionScript 2 Game created while studying BA(Hons) Games Design. 
 
 - name: Blu Crusader
   image: /images/blucrusader.png
   link: /blucrusader
   status: Completed
   folder: Archived
-  description: ActionScript 2 game created while studying BA(Hons) Games Design. 
+  description: ActionScript 2 Game created while studying BA(Hons) Games Design. 
