--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,16 @@
+- name: Boids - Flocking simulation
+  image: /images/bulletboids.png
+  link: /bulletboids
+  status: Prototype Completed
+  folder: Archived
+  description: Flocking simulation created using the Bullet Physics Engine for my MSc Computer Games Technology at City University.
+
 - name: Sonic OpenGL 4.0
   image: /images/sonicopengl.png
   link: /openglsonic
   status: Prototype Completed
   folder: Archived
-  description: OpenGL 4.0 simulation created using C++ for 3D Computer Graphics module as part of my MSc Games Computer Technology.
+  description: OpenGL 4.0 simulation created using C++ for 3D Computer Graphics module as part of my MSc Computer Games Technology.
 
 - name: Run For Cream
   image: /images/runforcream.png
